# bitfinex_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.md  notes.txt  vbuild.sh  vprep_externs.sh  vrebuild_run.sh
bitfinex/: CMakeLists.txt  bitfinex.cpp  bitfinex.h  json_obj.cpp  json_obj.h  market_data_feed.cpp  market_data_feed.h  order_book_p.h  order_book_r.h  parser.cpp  parser.h  profile_utils.cpp  profile_utils.h  subscription.h  subscription_cfg.cpp  subscription_cfg.h  types.h  x_assert.h
bitfinex_test/: CMakeLists.txt  bitfinex_test.cpp  test_utils.h  ut_book_map.cpp  ut_dense_map.cpp  ut_json_obj.cpp  ut_level_book.cpp  ut_main.cpp  ut_market_data_feed.cpp  ut_parser.cpp
bitfinex_test/proto_examples/: exch_example_p0_len250.txt  exch_example_r0.txt
core/: CMakeLists.txt  ______classes_sketch.h  any.h  array_sz.h  cmpxchg16b.h  cold_data.h  color.h  config.h  dense_map.h  epoll_event_mask.cpp  epoll_event_mask.h  epoll_set.cpp  epoll_set.h  error.cpp  error.h  fast_clock.cpp  fast_clock.h  fast_parse.h  gcc_utils.h  hashers.h  i_reconfigurable.h  i_service.h  i_stats_source.h  log.h  profile_utils.cpp  profile_utils.h  scope_exit.h  str_view.h  string_utils.cpp  string_utils.h  swallow_exceptions.h  t_uint.h  thread_utils.h  throttle.h  time_util.cpp  time_util.h  tpl_intrinsics.h  vector_view.h  vreg_avx2.h  worker_thread.cpp  (+2 more)
core/utest/: CMakeLists.txt  ut_dense_map.cpp  ut_url.cpp
core_test/: CMakeLists.txt  ut_dense_map.cpp
docs/: markers.vpp  markers.vpp.bak_000f  markers.vpp.bak_001d  markers.vpp.bak_002d  markers.vpp.bak_003d  markers.vpp.bak_004d  markers.vpp.bak_005d  markers.vpp.bak_006d  markers.vpp.bak_007d  markers.vpp.bak_008d  markers.vpp.bak_009d  markers.vpp.bak_010d  markers.vpp.bak_011d  markers.vpp.bak_012d  markers.vpp.bak_013d  markers.vpp.bak_014d  markers.vsdx  production_server_info.txt
global/: constants.h
marketlinks/: CMakeLists.txt
marketlinks/binance/: CMakeLists.txt  README.md  market_data_feed.cpp  market_data_feed.h
marketlinks/binance/test_lws/: CMakeLists.txt  test_lws_main.cpp
marketlinks/binance/test_poc_sarb/: CMakeLists.txt  test_poc_sarb.cpp
marketlinks/binance/test_poc_sarb/proto_examples/: example1.txt  example_all_tickers.txt  example_fstream.txt  one_all_tickers_line.txt  seven_tickers.txt
marketlinks/binance/utest/: CMakeLists.txt  ut_main.cpp  ut_parser.cpp  ut_poc1.cpp
marketlinks/bitfinex/: CMakeLists.txt  market_data_feed.cpp  market_data_feed.h  order_book_p.h  order_book_r.h  parser.h  subscription_cfg.cpp  types.h
marketlinks/bitfinex/utest/: CMakeLists.txt  test_utils.h  ut_book_map.cpp  ut_json_obj.cpp  ut_level_book.cpp  ut_main.cpp  ut_market_data_feed.cpp  ut_parser.cpp
marketlinks/bitfinex/utest/proto_examples/: exch_example_p0.txt  notes.md  symbols_details.txt
marketlinks/common/: CMakeLists.txt  arb_ptr.h  buf_desc.h  json_obj.cpp  json_obj.h  rest_request.h  types.h
server_engine/: CMakeLists.txt  server_engine.cpp  server_engine.h
web_socket/: CMakeLists.txt  url.cpp  url.h  web_socket_client.cpp  web_socket_client.h
web_socket/utest/: ut_synchronous_bitfinex.cpp  ut_synchronous_hitbtc.cpp
web_socket_async/: CMakeLists.txt  lws_custom.cpp  lws_custom.h  ws_client.cpp  ws_client.h  ws_thread_context.cpp  ws_thread_context.h
web_socket_async/utest/: CMakeLists.txt  ut_test1.cpp
web_socket_fast/: CMakeLists.txt  ws_thread_context.cpp  ws_thread_context.h
web_socket_fast/utest/: CMakeLists.txt  ut_main.cpp
web_socket_simple/: CMakeLists.txt  web_socket_client.h
web_socket_simple/utest/: CMakeLists.txt  ut_client_recv.cpp  ut_url.cpp
web_socket_test/: CMakeLists.txt  test_async_echo.cpp  ut_basics.cpp  ut_client_recv.cpp  ut_synchronous_bitfinex.cpp  ut_url.cpp
